--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "vue-router": "^3.3.4",
+        "vue-template-compiler": "^2.6.10",
+        "vuex": "^3.4.0"
     }
 }
