--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "vue-router": "^3.3.4",
         "vue-template-compiler": "^2.6.10",
         "vuex": "^3.4.0"
+    },
+    "dependencies": {
+        "bootstrap-vue": "^2.15.0"
     }
 }
